--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i|PT+Mono|PT+Sans:400,400i,700,700i&amp;subset=cyrillic-ext" rel="stylesheet">
     <link rel="stylesheet" href="/dist/app.css">
-    <title>Yandex-academy</title>
-<link href="./app.css" rel="stylesheet"></head>
+    <title>Document</title>
+<link href="/dist/app.css" rel="stylesheet"></head>
 <body>
     <header>
 		<div class="wrapper">
