--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="https://fonts.googleapis.com/css?family=Montserrat:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i|PT+Mono|PT+Sans:400,400i,700,700i&amp;subset=cyrillic-ext" rel="stylesheet">
     <link rel="stylesheet" href="/dist/app.css">
     <title>Document</title>
-<link href="/dist/app.css" rel="stylesheet"></head>
+<link href="./app.css" rel="stylesheet"></head>
 <body>
     <header>
 		<div class="wrapper">
@@ -87,6 +87,5 @@
 		</div>
 		
 	</footer>
-    <script src="/dist/app.js"></script>
 <script type="text/javascript" src="/dist/app.js"></script></body>
 </html>
