--- a/index.html
+++ b/index.html
@@ -87,5 +87,5 @@
 		</div>
 		
 	</footer>
-<script type="text/javascript" src="/dist/app.js"></script></body>
+<script type="text/javascript" src="./app.js"></script></body>
 </html>
