--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@
 		<div class="wrapper">
 			<h2>Контактная информация</h2>
 			<div class="link-container">
-				<a href="##" class="social-link"><i class="fb"></i></a>
-				<a href="##" class="social-link"><i class="twitter"></i></a>
-				<a href="##" class="social-link"><i class="telegram"></i></a>
+				<a href="##" class="social-link"></a>
+				<a href="##" class="social-link"></a>
+				<a href="##" class="social-link"></a>
 			</div>
 			<article id="footer-text">Я открыт для новых проектов. Вы можете прислать мне для оценки примерное техническое задание или просто описание проекта своими словами.</article>
 			<form>
